service-nextcloud.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-service
  namespace: nextcloud
  labels:
    app: nextcloud
spec:
  ports:
  - port: 80
    targetPort: 80
    name: http
  selector:
    app: nextcloud
